Fix flicker onClick for Next and Prev Arrows in IE11

--- a/slick/slick-theme.less
+++ b/slick/slick-theme.less
@@ -54,6 +54,7 @@
 }
 
 .slick-prev:before, .slick-next:before {
+    position: absolute;
     font-family: @slick-font-family;
     font-size: 20px;
     line-height: 1;
